feat(mes): lock QA version for active PQC orders